--- a/config/snippets.yml
+++ b/config/snippets.yml
@@ -3,22 +3,18 @@ general_description:
   description: This is the text used as a general description for your program.
     It is displayed on the front page under the main image.
   value: |
-    The NSF-funded Research Experience for Undergraduates (REU) program managed by the Rice Quantum Institute (RQI) brings students to Rice University for a <b>ten-week interdisciplinary research program.</b>
-    The focus is on providing <b>highly promising undergraduate students</b>, frequently from schools with limited research experiences and resources, with a jump start into many aspects of research that cannot be learned within the typical undergraduate classroom experience.
-    Each student <b>works directly within the research group</b> of a faculty mentor from one of the science and engineering departments within RQI. Each project is designed to be part of the longer term research program of the faculty mentor, but individual to the student and manageable within ten weeks.
-    For most REU participants, this involves an <b>accelerated learning period</b> where they become familiar with a new field and depend on the undergrads, grads, postdocs and faculty advisor to show them the relevant literature, lab expertise, fabrication, instrumentation and computer skills.
-    This leads into the major period of research where <b>they are given the responsibility</b> for bringing the project to a successful completion. The students are collectively exposed to a range of disciplines through interactions with a variety of research groups in other labs, weekly seminars by graduate students and frequent scientific and social interactions (and joint housing) with the other REU students. REU participants are usually highly motivated, and their motivation typically increases when they learn of each other's progress. On the last day, students present their work at the <b>RQI Summer Research Colloquium.</b>
+    General Description\n\nThe National Science Foundation's Research Experience for Undergraduates (NSF-REU) program provides undergraduate students access to state-of-the-art facilities, the opportunity to work with accomplished and experienced faculty mentors, and to participate in highly collaborative, cutting-edge research projects.
 
 highlights:
   name: highlights
   description: ''
   value: |
     <ul>
-      <li>$4300 stipend</li>
-      <li>Reimbursement of travel costs up to $650</li>
+      <li>$XXXX stipend</li>
+      <li>Reimbursement of travel costs up to $XXX</li>
       <li>On-campus housing and a meal/dining plan - Hands-on research experience</li>
       <li>Weekly seminars and workshops</li>
-      <li>Training in scientific communication (poster presentation)</li>
+      <li>Training in scientific communication</li>
     </ul>
 eligibility_requirements:
   name: eligibility_requirements
@@ -38,11 +34,10 @@ application_information:
       <li>A completed application form, which includes a personal statement, any honors and awards received, and any scholarly </li>
       <li>Unofficial transcripts of all previous college or university work, including work in progress</li>
       <li>Contact information for 2 references (preferably professors in your major field) who know you well and can attest for your scholastic abilities</li>
-      <li>No application fee</li>
       <li>Once you begin an application, you can check the status at any time by logging into this website</li>
       <li>Only applications completed by the deadline will be reviewed</li>
     </ul>
 acknowledgment_of_funding_soruces:
   name: acknowledgment_of_funding_soruces
   description: Please provide text to be included on the site as acknowledgment of program funding. In addition (or instead) you may send an image of the funding agency logo.
-  value: Program is supported by the NSF REU Program (Physics, Chemistry, and DMR) and the DoD ASSURE program
+  value: Demo program is supported by ...
