--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,7 +2,7 @@ app_title:
   name: app_title
   description: A snippet of text that describes your program (e.g. REU in Regenerative
     Medicine, Multi-Scale Bioengineering, and Systems Biology)
-  value: Engineered Materials for Tissue Engineering and Drug Delivery.
+  value: GLADE REU program
 university:
   name: university
   description: This is used anywhere your university name is referenced.
@@ -10,7 +10,7 @@ university:
 department:
   name: department
   description: This is used anywhere your department name is referenced.
-  value: Jacobs School of Engineering (JSOE)
+  value: Scripps Institution of Oceanography
 department_postal_address:
   name: department_postal_address
   description: This is used anywhere the postal address is needed.  TODO
@@ -20,35 +20,35 @@ application_start:
   description: This is the 'opening date' for the application system. After this
     date, students can apply. This also controls what buttons are displayed in the
     navbar and on the homepage (e.g. Apply Now and Login).
-  value: 2016-03-14
+  value: 2017-02-01
 application_deadline:
   name: application_deadline
   description: This date determines when applications can no longer be created or
     updated. Similar to the above value, buttons to apply are removed after this
     date.
-  value: 2016-04-15
+  value: 2017-04-01
 notification_date:
   name: notification_date
   description: This date is used to let the applicants know when to expect a response.
     This is used in the confirmation emails.
-  value: 2016-05-09
+  value: 2017-04-15
 program_start_date:
   name: program_start_date
   description: This date is used in the header and confirmation emails to set when
     the NSFREU program begins.
-  value: 2016-06-20
+  value: 2017-06-25
 program_end_date:
   name: program_end_date
   description: Similar to the above value, this marks the end date for your NSFREU
     program.
-  value: 2016-08-26
+  value: 2017-08-26
 check_back_date:
   name: check_back_date
   description: |
     Once the application process is closed (after the application deadline),
     this value will inform students when to check back for information about next
     year's application.
-  value: January 2017
+  value: May 1, 2017
 mail_from:
   name: mail_from
   description: |
@@ -64,12 +64,12 @@ univeristy_url:
   name: university_url
   description: |
     Main URL for the parent organization, usually a university (e.g. http://ucsd.edu, http://www.rice.edu)
-  value: https://ucsd.edu
+  value: ''
 department_url:
   name: department_url
   description: |
     Main URL for the organization, usually a department
-  value: http://jacobsschool.ucsd.edu/
+  value: https://scripps.ucsd.edu/
 program_url:
   name: program_url
   description: |
