--- a/config/database.yml
+++ b/config/database.yml
@@ -1,27 +1,23 @@
+# Hi - please dont edit this file directly, instead make changes in your .env file
+
+login: &login
+  adapter: postgresql
+  host: <%= ENV['POSTGRES_HOST'] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
+  database: <%= ENV['POSTGRES_DB'] %>
+
 
 development:
-  adapter: postgresql
-  database: reumanager_dev
-  user:
-  password:
-  host: localhost
-  pool: 5
-  timeout: 5000
+  <<: *login
 
 test:
-  adapter: postgresql
-  database: reumanager_test
-  user:
-  password:
-  host: localhost
-  pool: 5
-  timeout: 5000
+  <<: *login
+  database: <%= ENV['TEST_DB'] %>
+
+staging:
+  <<: *login
+
 
 production:
-  adapter: postgresql
-  database: reumanager_prod
-  user:
-  password: 
-  host: localhost
-  pool: 5
-  timeout: 5000
+  <<: *login
