--- a/config/settings.yml
+++ b/config/settings.yml
@@ -24,7 +24,7 @@ application_start:
   description: This is the 'opening date' for the application system. After this
     date, students can apply. This also controls what buttons are displayed in the
     navbar and on the homepage (e.g. Apply Now and Login).
-  value:
+  value: 2018-01-01
 application_deadline:
   name: Application Deadline
   description: This date determines when applications can no longer be created or
